# wand

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: cli.rs  config.rs  http.rs  lib.rs  main.rs  pusher.rs  util.rs
src/commands/: install.rs  login.rs  mod.rs
src/commands/cast/: http.rs
src/commands/list/: http.rs
src/commands/login/: http.rs
