[package]
name = "wand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
ureq = { version = "2.8.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
color-eyre = "0.6.2"
tungstenite = "0.20.1"
url = "2.4.1"
