[package]
name = "wand"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
ureq = { version = "2.8.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
color-eyre = "0.6.2"
tungstenite = "0.20.1"
url = "2.4.1"
colored = "2.0.4"
data-encoding = "2.5.0"
crossterm = "0.27.0"
ctrlc = "3.4.1"
seahorse = "2.2.0"
rand = "0.8.5"
dirs = "5.0.1"
lazy_static = "1.4.0"
handlebars = "5.1.2"
which = "6.0.1"
base64 = "0.22.0"
